--- a/app/assets/stylesheets/modules/_restaurant-page.scss
+++ b/app/assets/stylesheets/modules/_restaurant-page.scss
@@ -147,7 +147,7 @@ color: #cd7401;
 .frame-type-1 {
     border: 1px solid rgba(0,0,0,.1);
     background-color: #fff;
-    padding: 15px;
+    padding: 15px 15px 30px 15px;
 }
 
 .float-left{
